--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/netlify": "^6.0.1",
+    "@astrojs/cloudflare": "^12.1.0",
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.3",
     "resend": "^4.0.1",
