--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview",
+    "preview": "wrangler pages dev ./dist",
     "astro": "astro",
     "prettier": "prettier . --write"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/cloudflare": "^12.1.0",
-    "@astrojs/tailwind": "^5.1.3",
-    "astro": "^5.0.3",
+    "@astrojs/tailwind": "^5.1.4",
+    "astro": "^5.1.1",
     "resend": "^4.0.1",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "wrangler": "^3.99.0"
   },
   "devDependencies": {
     "daisyui": "^4.12.22",
