--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,1 +1,1 @@
-compatibility_flags = [ "nodejs_compat"]
+compatibility_flags = [ "nodejs_compat","node:util","node:events","node:path","node:stream","node:os" ]
