--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "wrangler pages dev ./dist",
+    "preview": "astro preview",
     "astro": "astro",
     "prettier": "prettier . --write"
   },
@@ -16,8 +16,7 @@
     "astro": "^5.1.1",
     "resend": "^4.0.1",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4",
-    "wrangler": "^3.99.0"
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "daisyui": "^4.12.22",
