--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/cloudflare": "^12.1.0",
     "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/vercel": "^8.0.1",
     "astro": "^5.1.1",
     "resend": "^4.0.1",
     "tailwindcss": "^3.4.10",
