--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "wrangler pages dev ./dist",
+    "build": "astro build",
+    "preview": "astro build && wrangler pages dev",
     "astro": "astro",
-    "prettier": "prettier . --write"
+    "deploy": "astro build && wrangler pages deploy",
+    "cf-typegen": "wrangler types"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/cloudflare": "^12.1.0",
     "@astrojs/tailwind": "^5.1.4",
-    "@astrojs/vercel": "^8.0.1",
     "astro": "^5.1.1",
     "resend": "^4.0.1",
     "tailwindcss": "^3.4.10",
@@ -23,6 +22,8 @@
   "devDependencies": {
     "daisyui": "^4.12.22",
     "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "@cloudflare/workers-types": "^4.20241224.0",
+    "wrangler": "^3.99.0"
   }
 }
